<resources>
    <string name="app_name">Shipper</string>
    <string name="order">Order</string>
    <string name="income">Income</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="free_pick">Free-Pick</string>
    <string name="process">Process</string>
    <string name="complete">Complete</string>
    <string name="point">" point"</string>
    <string name="get_order">"Get: "</string>
    <string name="pay_money">"Pay: "</string>
    <string name="ship_order">"Ship: "</string>
    <string name="receive_money">"Receive: "</string>
    <string name="get_now">Get now</string>
    <string name="ship_now">Ship now</string>
    <string name="schedule_ship">"Schedule ship: "</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="support_center">Support center</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="order_detail">Order Detail</string>
    <string name="number">Number</string>
    <string name="dish_name">#Dish Name</string>
    <string name="money">Money</string>
    <string name="total">Total</string>
    <string name="phone">Phone</string>
    <string name="chat">Chat</string>
    <string name="arrived">Arrived</string>
    <string name="refuse">Refuse</string>
    <string name="ordered">Ordered</string>
    <string name="delivered">Delivered</string>
    <string name="receive">Receive</string>
    <string name="login">Login</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="confirm">Confirm</string>
    <string name="notify_phone_number">Phone number must be 10 characters</string>
    <string name="options">Options:</string>
    <string name="notification">Notification</string>
    <string name="enter_message">Enter your message...</string>
    <string name="check_in">Check in today</string>
    <string name="your_location">Your current location</string>
    <string name="cancel">Cancel</string>
    <string name="location_off">You have not turned on GPS</string>
    <string name="check_out">Check out today</string>
    <string name="account_balance">Account balance</string>
    <string name="submit_money">Submit a withdrawal request</string>
    <string name="max_order">Maximum orders</string>
    <string name="max_distance">Maximum distance</string>
    <string name="max_money">The maximum amount</string>
    <string name="with_draws">With draws</string>
    <string name="processing">Processing...</string>
    <string name="modify_max_order_success">Modify maximum order success</string>
    <string name="modify_max_distance_success">Modify maximum distance success</string>
    <string name="modify_max_amount_success">Modify maximum amount success</string>
    <string name="notify_not_enough_money">You have not enough money</string>
    <string name="month_01">Jan</string>
    <string name="month_02">Feb</string>
    <string name="month_03">Mar</string>
    <string name="month_04">Apr</string>
    <string name="month_05">May</string>
    <string name="month_06">Jun</string>
    <string name="month_07">Jul</string>
    <string name="month_08">Aug</string>
    <string name="month_09">Sep</string>
    <string name="month_10">Oct</string>
    <string name="month_11">Nov</string>
    <string name="month_12">Dec</string>
    <string name="monthly_income">Monthly income</string>
    <string name="total_orders">Total orders</string>
    <string name="orders">orders</string>
    <string name="total_value_orders">Total value of orders</string>
    <string name="notify_exit">Press back again to exit</string>
    <string name="notify_sign_out">Sign out success</string>
</resources>