<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hcmus.fit.shipper.ui.HomeFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bill"
        android:name="com.hcmus.fit.shipper.ui.BillFragment"
        android:label="@string/income"
        tools:layout="@layout/fragment_bill" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.hcmus.fit.shipper.ui.FavoriteFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hcmus.fit.shipper.ui.NotificationsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>