<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_dark"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/profile"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/avatar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nguyen Van A"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_user_avatar"
            />
        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: 7826936273"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_user_avatar"
            android:layout_below="@+id/tv_user_name"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:background="@color/white"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_support"
            android:drawablePadding="5dp"/>
        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:background="@color/white"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_setting"
            android:drawablePadding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:background="@color/white"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="5dp"/>
    </LinearLayout>
</LinearLayout>